fix responsive on tablet

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -828,6 +828,11 @@ footer a:hover {
   width: 100%;
   height: 100%;
 }
+@media (max-width: 991px) {
+  .project-concept .project-concept__img {
+    width: 90%;
+  }
+}
 .project-concept .project-concept__content {
   width: 50%;
   margin-left: 20px;
@@ -838,7 +843,18 @@ footer a:hover {
   line-height: 32px;
   font-weight: 300;
 }
+@media (max-width: 991px) {
+  .project-concept .project-concept__content {
+    width: 100%;
+  }
+}
 
+@media (max-width: 991px) {
+  .project-concept {
+    align-items: center;
+    flex-direction: column;
+  }
+}
 .project-concept--mobile {
   margin-top: 80px;
 }
